cabal-version:      3.0
name:               gloss-relative
version:            0.1.2.0
synopsis: Painless relative-sized pictures in Gloss.
description: A new Frame data type for Gloss that simplifies drawing vector graphics with relative sizes and flexible layouts -- no more hardcoding distances. Bonus: graphics automatically resize when the screen changes, and native mouse hover events over defined screen regions.

license:            BSD-3-Clause
license-file:       LICENSE

extra-doc-files:
  README.md

author:             Hugo Pacheco
maintainer:         hpacheco@di.uminho.pt

category:           Graphics
build-type:         Simple

common warnings
    ghc-options:

library
    import:           warnings

    exposed-modules:
        Graphics.Gloss.Relative
        Graphics.Gloss.Relative.Frame
        Graphics.Gloss.Relative.Interface

    other-modules:
        Graphics.Gloss.Relative.Internal.Dimension
        Graphics.Gloss.Relative.Internal.Frame
        Graphics.Gloss.Relative.Internal.Picture
        Graphics.Gloss.Relative.Internal.Window
        Graphics.Gloss.Relative.Internal.Raster
        Graphics.Gloss.Relative.Internal.Cache
        Graphics.Gloss.Relative.Internal.Data

    -- other-extensions:

    build-depends: gloss, base < 5, mtl, containers, bytestring, OpenGL, gloss-rendering

    hs-source-dirs:   src
    default-language: GHC2021

executable gloss-relative-checkers
    import:           warnings
    main-is:          Checkers.hs
    build-depends:    base < 5, gloss-relative >= 0.1.2.0
    hs-source-dirs:   examples
    default-language: Haskell2010

executable gloss-relative-button
    import:           warnings
    main-is:          Button.hs
    build-depends:    base < 5, gloss-relative >= 0.1.2.0
    hs-source-dirs:   examples
    default-language: Haskell2010

executable gloss-relative-drag
    import:           warnings
    main-is:          Drag.hs
    build-depends:    base < 5, gloss-relative >= 0.1.2.0
    hs-source-dirs:   examples
    default-language: Haskell2010

source-repository head
   type:     git
   location: https://github.com/hpacheco/gloss-relative/